# ValPro

./: .gitignore  CMakeLists.txt  README.MD  conanfile.py
cmake/: CompilerWarnings.cmake  GenerateAndInstallConfig.cmake  ProjectOptions.cmake  StandardProjectSettings.cmake
src/: CMakeLists.txt
src/main/: CMakeLists.txt  main.cpp
src/memory/: CMakeLists.txt  memory.cpp
src/memory/include/: memory.hpp
